--- a/Nimbus/nimbus/public/staticwebapp.config.json
+++ b/Nimbus/nimbus/public/staticwebapp.config.json
@@ -5,5 +5,44 @@
   },
   "mimeTypes": {
     ".json": "text/json"
+  },
+  "routes": [
+    {
+      "route": "/login",
+      "serve": "/index.html",
+      "statusCode": 200
+    },
+    {
+      "route": "/dashboard",
+      "serve": "/index.html",
+      "statusCode": 200
+    },
+    {
+      "route": "/dashboard/*",
+      "serve": "/index.html",
+      "statusCode": 200
+    },
+    {
+      "route": "/signup",
+      "serve": "/index.html",
+      "statusCode": 200
+    }
+  ],
+  "responseOverrides": {
+    "401": {
+      "redirect": "/login",
+      "statusCode": 302
+    },
+    "403": {
+      "redirect": "/login",
+      "statusCode": 302
+    },
+    "404": {
+      "rewrite": "/index.html",
+      "statusCode": 200
+    }
+  },
+  "globalHeaders": {
+    "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
   }
 } 
