--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_AZURE_CLIENT_ID=6438927f-5f93-41f7-80aa-d6516cd19114
 REACT_APP_AZURE_TENANT_NAME=nimbustodo1
 REACT_APP_AZURE_POLICY_NAME=B2C_1_nimbussignup_signin
+CI=false
